# routes/api.php
@@ -4,6 +4,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\RoleController;
+use App\Http\Controllers\RuleController;
+use App\Models\User;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,8 +22,12 @@ Route::post('register',[UserController::class, 'register']);
 Route::post('login',[UserController::class, 'login']);
 Route::get('getRoles',[RoleController::class, 'getRoles']);
 
+
 Route::group(['middleware' => 'jwt.auth'], function () {
     Route::post('logout',[UserController::class, 'logout']);
     Route::post('refreshToken',[UserController::class, 'refreshToken']);
-    Route::post('addRole',[RoleController::class, 'addRole']);    
+    Route::post('addRole',[RoleController::class, 'addRole']);
+    Route::post('getUserRole',[UserController::class, 'getUserRole']);
+    Route::get('getRules',[RuleController::class, 'index']);
+    Route::post('addRules',[RuleController::class, 'store']);    
 });
